--- a/wapm.toml
+++ b/wapm.toml
@@ -1,11 +1,15 @@
-[module]
+[package]
 name = "lua"
-version = "0.1.0"
+version = "0.1.3"
 description = "Lua is a lightweight, multi-paradigm programming language designed primarily for embedded use in applications"
 readme = "README.md"
-module = "lua.wasm"
 repository = "https://github.com/wapm-packages/lua"
+
+[[module]]
+name = "lua"
+source = "lua.wasm"
 abi = "Emscripten"
 
 [[command]]
 name = "lua"
+module = "lua"
